<?xml version="1.0"?>
<package format="2">
  <name>imagenex_deltat</name>
  <version>0.0.0</version>
  <description>ROS nodes for reading Imagenex DeltaT data and publish to ROS messages</description>

  <maintainer email="roland@ccom.unh.edu">Roland Arsenault</maintainer>

  <license>Apache-2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>sensor_msgs</depend>
  <depend>rospy</depend>

  <export>
  </export>
</package>
